--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "fastapi>=0.115.12",
     "twscrape>=0.16.0",
+]
+
+[project.optional-dependencies]
+api = [
+    "fastapi>=0.115.12",
     "uvicorn>=0.34.0",
 ]
